# LKTorch

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DebuggingCmakeSetting.txt  LICENSE.md  MANIFEST.in  PythonCmakeSetting.txt  README.md  auto_compile.bat  pyproject.toml  setup.py
asset/: tmp.txt
docs/: HOW.md  todo_list.md
examples/FFN/: inference.ipynb  inference.py  training.ipynb  training.py
examples/MNIST/: inference.py  test_training.py  training.py
examples/MNIST(CNN)/: inference.ipynb  training.ipynb
examples/MNIST(FFN)/: inference.ipynb  training.ipynb
examples/RNN/: inference.ipynb  inference.py  training.ipynb  training.py
include/: DebugAssist.hpp  GeneralMath.hpp  LKTorch.hpp  Layer.hpp  LinearAlg.hpp  Loss.hpp  Optimizer.hpp  StaticVector.hpp  Tensor.hpp
include/DebugAssist/: DebugAssist.hpp
include/FileHandling/: StateDictSaver.hpp
include/Helper/: GeneralMath.hpp  StaticVector.hpp
include/Tensor/: BaseTensor.hpp  DebugTensor.hpp  RawTensor.hpp  SingletonTensor.hpp  Tensor.hpp  TensorFunction.hpp  TensorInit.hpp  TensorMathOp.hpp  TensorOperation.hpp
include/TensorManip/: Layer.hpp  Loss.hpp  Module.hpp  Optimizer.hpp  Sequential.hpp  TensorManip.hpp
lktorch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: DebugAssist.cpp  GeneralMath.cpp  Layer.cpp  LinearAlg.cpp  Loss.cpp  Optimizer.cpp  StaticVector.cpp  Tensor.cpp  bindings.cpp  main.cpp
src/DebugAssist/: DebugAssist.cpp
src/Helper/: GeneralMath.cpp  StaticVector.cpp
src/Tensor/: BaseTensor.cpp  DebugTensor.cpp  RawTensor.cpp  SingletonTensor.cpp  TensorFunction.cpp  TensorInit.cpp  TensorMathOp.cpp  (+1 more)
test/: lktorch.cp310-win_amd64.pyd  main.py
(+3 files in other folders)
