[project]
name = "lktorch"
version = "0.0.1"
authors = [
  { name="Le Kien Thanh", email="steveonalex@gmail.com" },
]
description = "Pytorch clone"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["setuptools>=42", "pybind11>=2.6.1"]
build-backend = "setuptools.build_meta"